implement attack sound playing